--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -1,19 +1,18 @@
 ---
 layout: archive
+title: "Blog Posts"
 permalink: /year-archive/
-title: "Blog posts"
 author_profile: true
-redirect_from:
-  - /wordpress/blog-posts/
 ---
 
 {% include base_path %}
-{% capture written_year %}'None'{% endcapture %}
-{% for post in site.posts %}
-  {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
-  {% if year != written_year %}
-    <h2 id="{{ year | slugify }}" class="archive__subtitle">{{ year }}</h2>
-    {% capture written_year %}{{ year }}{% endcapture %}
-  {% endif %}
-  {% include archive-single.html %}
-{% endfor %}
+
+<div class="notice--info">
+  <p><strong>Under construction:</strong> I’m preparing fresh articles on seismic imaging, processing, and inversion. Check back soon for long-form posts.</p>
+</div>
+
+{% if site.posts and site.posts.size > 0 %}
+  {% for post in site.posts reversed %}
+    {% include archive-single.html %}
+  {% endfor %}
+{% endif %}
